# HCU311_Sailing_Robot

HCU-311-V1.0.1/: configure_jy901.py  readme.txt  uart0_to_uart5.py  uart_threading.py
HCU-311-V1.0.1/apriltag/: apriltags.py  position.txt
HCU-311-V1.0.1/apriltag/apriltag-master/: CMakeCache.txt  Makefile  apriltag_demo  cmake_install.cmake  install_manifest.txt  opencv_demo
HCU-311-V1.0.1/auto_control/: wfly.py
HCU-311-V1.0.1/camera/: CMakeLists.txt  OpenCamera.cpp
HCU-311-V1.0.1/sailing_robot_control/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
HCU-311-V1.0.1/sailing_robot_control/src/ball_detected/: CMakeLists.txt  package.xml
HCU-311-V1.0.1/sailing_robot_control/src/sailing_robot/: CMakeLists.txt
HCU-311-V1.0.1/sensor/devel/: .catkin  .rosinstall  setup.sh
HCU-311-V1.0.1/sensor_test/: readme  sensor_adc.py  sensor_gps.py  sensor_imu.py  sensor_motorPo.py
HCU-311-V1.0.1/simulator/sailing_robot_master/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
HCU-311-V1.0.1/simulator/sailing_robot_master/src/: sailing_robot_2020-04-01-23-18-05.bag
matplot_new/devel/: .catkin  .rosinstall  setup.sh
matplot_new/devel/include/sailing_robot/: BatteryState.h  Velocity.h  gpswtime.h  ll.h
matplot_new/devel/lib/pkgconfig/: sailing_robot.pc
matplot_new/src/sailing_robot/: CMakeLists.txt  readme
matplot_new/src/sailing_robot/launch/: repetition.launch  replay.launch
matplot_new/src/sailing_robot/msg/: ll.msg
matplot_new/src/sailing_robot/scripts/: actuator_driver_rudder  actuator_driver_rudder1  actuator_driver_rudder2  tasks  (+12 more)
(+98 files in other folders)
