cmake_minimum_required(VERSION 3.5)
project( OpenCamera )
#set(OpenCV_DIR "/opt/alinx/opencv_host_lib/share/OpenCV") 
#set(OpenCV_LIBS "/opt/alinx/opencv_host_lib/lib") 
#add_compile_options(/WX)
#add_compile_options(/W4)
find_package( OpenCV REQUIRED )
add_executable(OpenCamera  OpenCamera.cpp )
target_link_libraries( OpenCamera ${OpenCV_LIBS} )
